--- a/prj.css
+++ b/prj.css
@@ -27,7 +27,15 @@
     -webkit-font-smoothing : none;
     color: rgb(255, 255, 255);
 }
-html{overflow:hidden}
+html{
+    overflow:hidden
+    
+}
+
+body {
+    font-size: .5rem;
+}
+
 body{margin:0;background-color: rgb(0, 0, 0); }
 
 .overlay {
